EDOSPNC-649 Fix alignement

--- a/src/app/modules/eobservation/components/eobs-theme/eobs-theme.component.scss
+++ b/src/app/modules/eobservation/components/eobs-theme/eobs-theme.component.scss
@@ -26,12 +26,12 @@ eobs-theme{
 
             .skillsLabel {
                 display: flex;
-                flex-grow: 2;
+                flex: 1;
                 width:auto;
             }
     
             .skillsValue {
-                flex-grow: 1;
+                flex: 2;
                 margin: initial;
                 padding-left: 15px;
                 display: flex;
@@ -49,7 +49,9 @@ eobs-theme{
 
 
         radio-and-label {
-            padding-bottom: 5px;
+            .container {
+                padding-bottom: 5px;
+            }
         }
     }
 
@@ -66,7 +68,9 @@ eobs-theme{
             margin: initial;
 
             checkbox-and-label {
-                padding-bottom: 5px;
+                .container {
+                    padding-bottom: 5px;
+                }
             }
         }
 
